# University-Management-System

./: .gitignore  .gitlab-ci.yml  .replit  CMakeLists.txt  COMPLETE_SYSTEM_OVERVIEW.md  COURSE_AND_ENROLLMENT_SUMMARY.md  DATABASE_SETUP_COMPLETE.md  Dockerfile  GRADES_SUMMARY.md  Makefile  PushMe1!  PushMe1!.pub  USAGE_GUIDE.md  generate_appointments.py  main.cpp  replit.md  sbom-components.csv  sbom-custom.json  test_student_profile.txt
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@errno.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  (+230 more)
data/: DATABASE_STATISTICS.txt  HONOR_ROLL.txt  LOGIN_CREDENTIALS.txt  STUDENT_GPAS.txt
docs/: index.html
include/: course.h  database.h  faculty.h  person.h  student.h
sbom_ui/: index.html
scripts/: csv_to_sbom.py  generate_sbom.sh  patch_sbom_version.py  scan_vulns.sh  setup_pki.sh  sign_sbom.sh  validate_sbom.sh  vuln_print_summary.py  vuln_summary.py
src/: main.cpp
(+9 files in other folders)
